testdata/baselines/reference/submodule/conformance/importTypeGeneric.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
usage.ts(1,67): error TS1141: String literal expected.
usage.ts(5,72): error TS1141: String literal expected.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== a.d.ts (0 errors) ====
    export interface Foo {
        a: string;
    }
==== b.d.ts (0 errors) ====
    export interface Foo {
        a: number;
    }
==== usage.ts (2 errors) ====
    export function getFooFrom<T extends "./a" | "./b">(v: T): import(T).Foo {
                                                                      ~
!!! error TS1141: String literal expected.
        return undefined as any;
    }
    
    export function getFooValueFrom<T extends "./a" | "./b">(v: T): import(T).Foo["a"] {
                                                                           ~
!!! error TS1141: String literal expected.
        return undefined as any;
    }
    